syntax = "proto3";

import "sample/v1/code.proto";

package sample.v1;

service SampleService {
  rpc Greet(GreetRequest) returns (GreetResponse) {}
}

message GreetRequest {
  // The name of the thing or person to greet.
  string name = 1;

  // Denotes which language to use for the greeting.
  sample.v1.Code language = 2;
}

message GreetResponse {
  // The full greeting.
  string greeting = 1;

  // Might be useful in the future.
  reserved "language_code";
  reserved 2;
}
